--- a/src/pages/Product/style.css
+++ b/src/pages/Product/style.css
@@ -1,8 +1,29 @@
 .product-container {
   width: 100%;
   height: calc(100vh - 60px);
-  padding: 50px;
+  /* padding: 50px; */
   background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.product-background {
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  z-index: -1;
+}
+
+.product-content{
+  padding: 50px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .product-container .product-title {
@@ -21,7 +42,7 @@
   margin-top: 2rem;
   display: flex;
   align-items: center;
-  justify-content:flex-start;
+  justify-content: flex-start;
   gap: 1rem;
 }
 
