--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,31 @@
   width: 100%;
   height: 100vh;
 }
+
+.main-container {
+  width: 100%;
+  height: calc(100vh - 60px);
+  /* padding: 50px; */
+  /* background-size: cover;
+  background-position: center; */
+  position: relative;
+}
+
+.bg-container{
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  z-index: -1;
+}
+
+.content-container{
+  padding: 50px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .3);
+}
