--- a/src/components/FeatureCard/style.css
+++ b/src/components/FeatureCard/style.css
@@ -1,19 +1,23 @@
-
-.feature-card-container{
+.feature-card-container {
   height: 120px;
   width: 200px;
   /* background: red; */
-  color:#fff
-  ;display: flex;
+  color: #fff;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
-.feature-card-image{
+.feature-card-image {
   width: 50px;
   height: 50px;
   filter: invert(1);
+}
+
+.feature-card-desc {
+  font-size: 0.9rem;
+  font-weight: 550;
 }
 
 @media (max-width: 768px) {
