--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -1,20 +1,55 @@
 .product-card-container {
-  /* background: red; */
-  width: 300px;
-  height: 400px;
-  border: 2px solid black;
-  border-radius: 1rem;
-  padding : 30px 15px
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background: white;
+  min-width: 200px;
+  max-width: 300px;
+  min-height: 350px;
+  max-height: 400px;
+  /* border: 2px solid black; */
+  border-radius: 5px;
+  /* padding : 30px 15px; */
+  -webkit-box-shadow: 0px 0px 20px 10px rgba(196, 196, 196, 1);
+  -moz-box-shadow: 0px 0px 20px 10px rgba(196, 196, 196, 1);
+  box-shadow: 0px 0px 20px 8px rgba(196, 196, 196, 1);
 }
 
-.product-card-container .product-title {
+.product-card-container a {
+  text-decoration: none;
+  color: white;
+  background: #00498e;
+  align-self: center;
+  padding: 10px 20px;
+  border-radius: 8px;
+margin-bottom: 10px;
 }
 
-.product-card-container .product-bg {
+.product-card-image-container {
   width: 100%;
+  height: 50%;
 }
 
-.product-card-container .product-heading {
+.product-card-image {
+  width: 100%;
+  height: 100%;
+}
+
+.product-card-content-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 15px;
+  /* align-items: center; */
+  gap: 0.5rem;
+}
+
+.product-card-title {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.product-card-heading {
+  font-size: 1rem;
 }
 
 @media (max-width: 768px) {
