--- a/src/pages/Product/style.css
+++ b/src/pages/Product/style.css
@@ -1,13 +1,12 @@
-.product-container {
+/* .product-container {
   width: 100%;
   height: calc(100vh - 60px);
-  /* padding: 50px; */
   background-size: cover;
   background-position: center;
   position: relative;
-}
+} */
 
-.product-background {
+/* .product-bg-container {
   position: absolute;
   background-size: cover;
   background-position: center;
@@ -15,15 +14,18 @@
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
   z-index: -1;
-}
+} */
 
-.product-content{
+/* .product-content{
   padding: 50px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
+} */
+
+.product-content {
+  padding: 50px 40% 50px 50px;
 }
 
 .product-container .product-title {
@@ -34,14 +36,14 @@
 
 .product-container .product-heading {
   color: #fff;
-  font-size: 3rem;
-  font-weight: 600;
+  font-size: 2.5rem;
+  font-weight: 500;
 }
 
 .product-container .product-features-container {
   margin-top: 2rem;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: flex-start;
   gap: 1rem;
 }
