--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,168 @@
-.App {
-  /* text-align: center; */
-  width: 100%;
-  height: 100vh;
+@charset "utf-8";
+
+/*====================================================================
+COMMEN CSS
+==================================================================*/
+html{ height: 100vh; }
+body {
+	margin: 0px;
+	padding: 0px;
+    min-height: 100%;
+}
+h1,h2,h3,h4,h5,h6,
+ul,ol,li,
+form,input,textarea,select {
+	margin: 0;
+	padding: 0;
+}
+header, nav, article, footer, address, section {  
+    display: block;  
+}
+p {
+	margin: 10px 0;
+}
+img {
+	border: 0;
+}
+.img-responsive{ max-width: 100%; }
+a {
+	text-decoration: none;
+	outline: none;
+}
+.left {
+	text-align: left;
+}
+.right {
+	text-align: right;
+}
+.center {
+	text-align: center;
+}
+.justify {
+	text-align: justify;
+}
+.float-left {
+	float: left;
+}
+.float-right {
+	float: right;
+}
+.clear {
+	clear: both;
+	overflow: hidden;
 }
 
-.main-container {
-  width: 100%;
-  height: calc(100vh - 60px);
-  /* padding: 50px; */
-  /* background-size: cover;
-  background-position: center; */
-  position: relative;
+#wrapper {
+
+	margin: 0 auto;
 }
 
-.bg-container{
-  position: absolute;
-  background-size: cover;
-  background-position: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  z-index: -1;
+/*====================================================================
+HEADER CSS
+==================================================================*/
+header {
+	background: #00498e;
+   
+}
+.contener{
+    max-width: 1250px;
+    margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.content-container{
-  padding: 50px;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, .3);
+nav {
+	
 }
+.logo-img{max-width:70px;  padding-top: 10px;}
+.menu img{ max-width:65px; margin-top: 5px;  }
+/* .screen1-bg{ background: url(/assets/images/images/screen-1.png) no-repeat left top; background-size: 100%; min-height: calc(100vh - 70px); } */
+.screen1-bg{ background: url('./assets/images/screen-1.png') no-repeat left top; background-size: 100%; min-height: calc(100vh - 70px); }
+.product{ display: flex; }
+.product .width33{ width: 33.3%; }
+.mt25 { margin-top: 25px;}
+.call{ z-index: 9; position: fixed; right: 0; bottom: 100px; }
+/*====================================================================
+FOOTER CSS
+==================================================================*/
+footer {
+	
+}
+/*====================================================================
+CONTENT CSS
+==================================================================*/
+section {
+	
+}
+
+
+
+
+@media (min-width: 576px) {
+    /*==Header CSS== */
+    .logo-img{max-width:80px; }
+    .menu img{ max-width:70px; margin-top: 5px; padding-left: 10px; padding-right: 10px;  }
+    /*==Banner CSS== */
+
+    /*==Content CSS== */
+
+    /*==Footer CSS== */
+}
+
+@media (min-width: 768px) {
+    .contener{
+    padding-left: 25px;
+    padding-right: 25px;
+}
+    /*==Header CSS== */
+ .logo-img{max-width:146px; }
+    .menu img{ max-width:100px; margin-top: 5px;  }
+    /*==Banner CSS== */
+
+    /*==Content CSS== */
+
+    /*==Footer CSS== */
+}
+
+@media (min-width: 992px) {
+    /*==Header CSS== */
+
+    /*==Banner CSS== */
+
+    /*==Content CSS== */
+
+    /*==Footer CSS== */
+}
+
+@media (min-width: 1100px) {
+    /*==Header CSS== */
+
+    /*==Banner CSS== */
+
+    /*==Content CSS== */
+
+    /*==Footer CSS== */
+}
+
+@media (min-width: 1200px) {
+    /*== Commen CSS == */
+      
+    /*==Header CSS== */
+
+    /*==Banner CSS== */
+
+    /*==Content CSS== */
+
+    /*==Footer CSS== */
+}
+
+@media (min-width: 1600px) {
+    /*==Header CSS== */
+
+    /*==Banner CSS== */
+
+    /*==Content CSS== */
+
+    /*==Footer CSS== */
+}
+
