--- a/src/components/FeatureCard/style.css
+++ b/src/components/FeatureCard/style.css
@@ -2,17 +2,22 @@
   height: 120px;
   width: 200px;
   /* background: red; */
-  color: #fff;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
+  /* border: 1px solid black; */
+  border-radius: 5px;
+  padding: 2%;
+  /* background: white; */
+  background: #ebebeb;
 }
 
 .feature-card-image {
   width: 50px;
   height: 50px;
-  filter: invert(1);
+  /* filter: invert(1); */
 }
 
 .feature-card-desc {
@@ -20,41 +25,42 @@
   font-weight: 550;
 }
 
+@media (min-width: 1200px) {
+  .feature-card-image {
+    width: 50px;
+    height: 50px;
+  }
+
+  .feature-card-desc {
+    font-size: 0.9rem;
+    font-weight: 550;
+  }
+}
+@media (max-width: 1000px) {
+  .feature-card-desc {
+    font-size: 0.8rem;
+    font-weight: 530;
+  }
+}
+
 @media (max-width: 768px) {
-  .nav-elements ul li:not(:last-child) {
-    /* margin-right: 30px; */
+  .feature-card-desc {
+    font-size: 0.7rem;
+    font-weight: 530;
   }
 }
 
 @media (max-width: 600px) {
-  .menu-icon {
-    display: block;
-    cursor: pointer;
+}
+
+@media (max-width: 400px) {
+  .feature-card-image {
+    width: 45px;
+    height: 45px;
   }
 
-  .nav-elements {
-    position: absolute;
-    right: 0;
-    top: 60px;
-    background-color: #00498e;
-    width: 0px;
-    height: calc(100vh - 60px);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
-  }
-
-  .nav-elements.active {
-    width: 270px;
-  }
-
-  .nav-elements ul {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-  }
-
-  .nav-elements ul li {
-    margin-right: unset;
-    /* margin-top: 22px; */
+  .feature-card-desc {
+    font-size: 0.6rem;
+    font-weight: 500;
   }
 }
