--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -1,14 +1,15 @@
 .product-card-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 1;
-  background: white;
+  background: #fcfcfc;
   min-width: 200px;
   max-width: 300px;
   min-height: 350px;
   max-height: 400px;
   /* border: 2px solid black; */
-  border-radius: 5px;
+  border-radius: 8px;
   /* padding : 30px 15px; */
   -webkit-box-shadow: 0px 0px 20px 10px rgba(196, 196, 196, 1);
   -moz-box-shadow: 0px 0px 20px 10px rgba(196, 196, 196, 1);
@@ -16,23 +17,47 @@
 }
 
 .product-card-container a {
+  position: absolute;
+  bottom: 0;
+  right: 20%;
+  transform: translateY(50%);
   text-decoration: none;
-  color: white;
-  background: #00498e;
+  color: #00498e;
+  background: white;
   align-self: center;
-  padding: 10px 20px;
-  border-radius: 8px;
-margin-bottom: 10px;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  -webkit-box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.06);
+  transition: all 500ms ease;
+}
+.product-card-container i {
 }
 
 .product-card-image-container {
   width: 100%;
-  height: 50%;
+  height: 100%;
+  overflow: hidden;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
 }
 
 .product-card-image {
   width: 100%;
   height: 100%;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+
+  transition: transform 500ms ease, opacity 500ms ease;
+  opacity: 1;
+  transform: scale(1);
 }
 
 .product-card-content-container {
@@ -49,44 +74,21 @@ margin-bottom: 10px;
 }
 
 .product-card-heading {
+  color: gray;
   font-size: 1rem;
 }
 
+.product-card-container:hover .product-card-image-container > img {
+  transform: scale(1.05);
+  opacity: 0.7;
+}
+.product-card-container:hover a {
+  color: white;
+  background: #00498e;
+}
+
 @media (max-width: 768px) {
-  .nav-elements ul li:not(:last-child) {
-    /* margin-right: 30px; */
-  }
 }
 
 @media (max-width: 600px) {
-  .menu-icon {
-    display: block;
-    cursor: pointer;
-  }
-
-  .nav-elements {
-    position: absolute;
-    right: 0;
-    top: 60px;
-    background-color: #00498e;
-    width: 0px;
-    height: calc(100vh - 60px);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
-  }
-
-  .nav-elements.active {
-    width: 270px;
-  }
-
-  .nav-elements ul {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-  }
-
-  .nav-elements ul li {
-    margin-right: unset;
-    /* margin-top: 22px; */
-  }
 }
