--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -1,32 +1,27 @@
 .login-container {
-  /* position: relative;
-  height: calc(100vh - 60px); */
 }
-
-/* .login-bg-container {
-  width: 100%;
-  height: calc(75vh - 60px);
-  padding: 50px;
-  background-size: cover;
-} */
 
 .login-bg-container {
   height: calc(75vh - 60px);
 }
 
-.login-content-container{
-  background-color: rgba(0, 0, 0, .1);
-
+.login-content-container {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .page-logo {
+  width: 20vw;
 }
 
 .login-form {
   position: absolute;
   background: #00498e;
-  width: 450px;
+  width: 85%;
+  min-width: 250px;
+  max-width: 450px;
   height: 60%;
+  max-height: 400px;
+  min-height: 300px;
   z-index: 2;
   left: 50%;
   top: 50%;
@@ -63,40 +58,19 @@ input[type="password"] {
 }
 
 @media (max-width: 768px) {
-  .nav-elements ul li:not(:last-child) {
-    /* margin-right: 30px; */
+  .content-container {
+
   }
 }
 
 @media (max-width: 600px) {
-  .menu-icon {
-    display: block;
-    cursor: pointer;
-  }
+  .content-container {
 
-  .nav-elements {
-    position: absolute;
-    right: 0;
-    top: 60px;
-    background-color: #00498e;
-    width: 0px;
-    height: calc(100vh - 60px);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
   }
+}
 
-  .nav-elements.active {
-    width: 270px;
-  }
+@media (max-width: 400px) {
+  .content-container {
 
-  .nav-elements ul {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-  }
-
-  .nav-elements ul li {
-    margin-right: unset;
-    /* margin-top: 22px; */
   }
 }
