--- a/src/pages/Product/style.css
+++ b/src/pages/Product/style.css
@@ -25,84 +25,138 @@
 } */
 
 .product-content {
-  padding: 50px 40% 50px 50px;
+  /* padding: 50px 40% 50px 50px; */
 }
 
-.product-container .product-title {
-  color: #fff;
-  font-size: 1.4rem;
-  font-weight: 450;
+.product-info {
+  padding: 25px 3%;
+  /* background: #ebebeb; */
+  background: white;
 }
 
-.product-container .product-heading {
-  color: #fff;
-  font-size: 2.5rem;
-  font-weight: 500;
-}
-
-.product-container .product-features-container {
-  margin-top: 2rem;
-  display: flex;
-  /* align-items: center; */
-  justify-content: flex-start;
-  gap: 1rem;
-}
-
-.home-heading {
-  margin: 10px;
-  font-size: 2.8rem;
-  font-weight: 500;
-}
-
-.sub-heading {
-  margin: 10px;
+.product-title {
+  color: rgb(91, 91, 91);
+  font-size: 52px;
   font-weight: 600;
-  margin-bottom: 40px;
+  text-align: center;
 }
 
-.see-prod-link {
-  text-decoration: none;
-  margin: 10px;
-  color: #fff;
-  background: #0b264c;
-  padding: 10px 50px;
+.product-heading {
+  color: #00498e;
+  font-size: 40px;
+  font-weight: 450;
+  text-align: center;
+}
+
+.product-features-container {
+  margin: 2.5rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  gap: .5rem;
+}
+
+@media (min-width: 1200px) {
+  .product-info h4 {
+    font-size: 60px;
+    font-weight: 500;
+  }
+  .product-heading {
+    font-size: 35px;
+  }
+}
+@media (max-width: 1000px) {
+  .product-info h4 {
+    font-size: 45px;
+    font-weight: 600;
+  }
+  .product-heading {
+    font-size: 32px;
+  }
 }
 
 @media (max-width: 768px) {
-  .nav-elements ul li:not(:last-child) {
-    /* margin-right: 30px; */
+  .home-heading {
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+
+  .home-sub-heading {
+    margin: 0;
+    font-size: 0.7rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+
+  .see-prod-link {
+    margin: 0;
+    font-size: 0.6rem;
+    padding: 5px 20px;
+  }
+
+  .home-feature-row {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .product-info h4 {
+    font-size: 40px;
+    font-weight: 600;
+  }
+  .product-heading {
+    font-size: 30px;
   }
 }
 
 @media (max-width: 600px) {
-  .menu-icon {
-    display: block;
-    cursor: pointer;
+  .home-heading {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 600;
   }
 
-  .nav-elements {
-    position: absolute;
-    right: 0;
-    top: 60px;
-    background-color: #00498e;
-    width: 0px;
-    height: calc(100vh - 60px);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
+  .home-sub-heading {
+    font-size: 0.6rem;
+    font-weight: 500;
+    margin-bottom: 5px;
   }
 
-  .nav-elements.active {
-    width: 270px;
+  .see-prod-link {
+    font-size: 0.5rem;
+    padding: 5px 20px;
+  }
+  .product-info h4 {
+    font-size: 35px;
+    font-weight: 600;
+  }
+  .product-heading {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 400px) {
+  .home-heading {
+    margin: 0;
+    font-size: 0.8rem;
+    font-weight: 600;
   }
 
-  .nav-elements ul {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+  .home-sub-heading {
+    font-size: 0.5rem;
+    font-weight: 500;
+    margin-bottom: 5px;
   }
 
-  .nav-elements ul li {
-    margin-right: unset;
-    /* margin-top: 22px; */
+  .see-prod-link {
+    font-size: 0.4rem;
+    padding: 5px 20px;
+  }
+  .product-info h4 {
+    font-size: 30px;
+    font-weight: 600;
+  }
+  .product-heading {
+    font-size: 20px;
   }
 }
