--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
   height: 100vh;
 }
 
-.call {
+/* .call {
   z-index: 20;
   position: fixed;
   right: 0;
+  top: 60%; */
   /* bottom: 100px; */
-  top: 60%;
-}
+/* } */
 
 .main-container {
   width: 100%;
