ui changes on login page

--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -37,6 +37,11 @@
 .form-title {
   color: #fff;
 }
+.login-form div {display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  gap: 10px;
+}
 
 .login-form input[type="text"],
 input[type="password"] {
